[UPDATE] fixed scrollbar visibility in wizard and bg flashing issue

--- a/src/index.css
+++ b/src/index.css
@@ -188,7 +188,7 @@
   --app-primary-dark: hsl(243.6 85.5% 66.7%);
 }
 html, body {
-  background: var(--secondary);
+  background: var(--background);
   color: var(--foreground);
   font-family: var(--font-sans);
 }
